# stock_news

./: .gitignore  news.py  pyproject.toml  yearCatcher.py
